[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/MainMenu/menu.png" type="Texture" id=1]
[ext_resource path="res://assets/MainMenu/board.png" type="Texture" id=2]
[ext_resource path="res://src/Buttons/TextureButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/MainMenu/new_game.png" type="Texture" id=4]
[ext_resource path="res://assets/MainMenu/continue.png" type="Texture" id=5]
[ext_resource path="res://assets/MainMenu/bye.png" type="Texture" id=6]
[ext_resource path="res://assets/MainMenu/settings.png" type="Texture" id=7]
[ext_resource path="res://src/MainMenu/MainMenu.gd" type="Script" id=8]
[ext_resource path="res://src/IntroStory/IntroStory.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Game/Game.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/MusicPlayer/MusicPlayer.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/audio/music/MenuTheme.wav" type="AudioStream" id=12]
[ext_resource path="res://src/FadeScreen/FadeLayer.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Buttons/SoundButton/SoundButton.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/MainMenu/train.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]
resource_name = "TrainIn"
length = 70.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10, 18, 36, 44, 45, 50 ),
"transitions": PoolRealArray( 1, 1, 4.14105, 1, 1, 0.0883884, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 21, 21 ), Vector2( 21, 21 ), Vector2( -21, 21 ), Vector2( -0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 38, 45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 45, 50 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 690.049, 283.983 ), Vector2( 690, 283.983 ), Vector2( 780, 283.983 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
intro_story_scene = ExtResource( 9 )
game_scene = ExtResource( 10 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.235962
margin_top = -0.471954
margin_right = -0.235962
margin_bottom = -0.471924
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Train" type="TextureRect" parent="Background"]
margin_left = 690.038
margin_top = 283.983
margin_right = 1671.55
margin_bottom = 882.974
rect_pivot_offset = Vector2( -30, 150 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrainAnimation" type="AnimationPlayer" parent="Background/Train"]
anims/TrainIn = SubResource( 1 )

[node name="Board" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -647.0
margin_top = -414.0
margin_right = 637.0
margin_bottom = 414.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="VBoxContainer" parent="Background/Board"]
margin_left = 284.0
margin_top = 155.0
margin_right = 1044.0
margin_bottom = 608.0

[node name="NewGameBtn" parent="Background/Board/ButtonsContainer" instance=ExtResource( 3 )]
margin_right = 760.0
margin_bottom = 148.0
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
texture_pressed = null
texture_hover = null
upscale_on_hover = true
downscale_on_press = true

[node name="ContinueBtn" parent="Background/Board/ButtonsContainer" instance=ExtResource( 3 )]
margin_top = 152.0
margin_right = 760.0
margin_bottom = 300.0
size_flags_horizontal = 5
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
texture_pressed = null
texture_hover = null
upscale_on_hover = true
downscale_on_press = true

[node name="SettingsBtn" parent="Background/Board/ButtonsContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 228.0
margin_right = 760.0
margin_bottom = 338.0
size_flags_horizontal = 5
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_pressed = null
texture_hover = null
upscale_on_hover = true
downscale_on_press = true

[node name="ExitBtn" parent="Background/Board/ButtonsContainer" instance=ExtResource( 3 )]
margin_top = 304.0
margin_right = 760.0
margin_bottom = 453.0
size_flags_horizontal = 5
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = null
texture_hover = null
upscale_on_hover = true
downscale_on_press = true

[node name="SoundButton" parent="." instance=ExtResource( 14 )]
margin_left = 24.0416
margin_top = 18.3848
margin_right = 113.042
margin_bottom = 104.385

[node name="MusicPlayer" parent="." instance=ExtResource( 11 )]
stream = ExtResource( 12 )
fade_in_time = 2.0
fade_out_time = 1.0
replay_delay = 5.0

[node name="FadeLayer" parent="." instance=ExtResource( 13 )]
